# Changelog

## Version 4.5.2

* Fixing #272 Codec drop down size fix (thanks to kachijs)
* Fixing build for 3.10 by updating to PySide6 6.2.2.1 (thanks to Nhunz)

## Version 4.5.1

* Fixing #273 Realtime VP9 bitrate mode must be single pass (thanks to Owen Quinlan)

## Version 4.5.0

* Adding #267 new onyx theme with custom icons (thanks to Joey Catt | Onyx Studios)
* Adding signing of Windows executables
* Adding new light and dark theme using BreezeStyles
* Adding #115 ability to provide concat file (thanks to Marco Ravich)
* Adding support for brightness, contrast and saturation filters
* Adding PySide6 as main GUI provider, now MIT licensed frontend!

## Version 4.4.2

* Fixing #264 changelog encoding was causing crashes on non utf-8 systems (thanks to lobofoot)

## Version 4.4.1

* Fixing colorspace details from advanced page not applied to x265 (thanks to Tình Em Là Đại Dương)

## Version 4.4.0

* Adding #237 zoom option for thumbnail (thanks to Lev Abashkin)
* Adding #259 support for all available audio format per encoder (thanks to alpha-0)
* Adding support for ENV variables - FF_CONFIG, FF_LANG, FF_HDR10PLUS, FF_WORKDIR
* Fixing FastFlix could not start if setting profile could not find x265 encoder
* Fixing that downloading latest FFmpeg can fail to extract files if previous ones exist (thanks to ProFire)
* Fixing that VCEEncC needs to use nnedi filter for deinterlacing (thanks to Onyx)

## Version 4.3.1

* Adding VCEEncC decoder option
* Adding support for HDR10+ parser version 1.0.0 and above
* Fixing VCEEncC interlace being passed "False" string
* Fixing VCEEncC was not being passed profile option
* Fixing keep / remove chapters and metadata were not explicit in both cases

## Version 4.3.0

* Adding VCEEncC encoder support for HEVC and AVC
* Fixing Chinese translations (thanks to leonardyan)
* Fixing #256 Cannot load NVENC profiles because RC Lookahead is stored as int (thanks to Jan Hellwig)

## Version 4.2.3
